--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,14 @@ lib_deps =
 	esp32-camera
 	bblanchon/ArduinoJson@^7.4.2
 	fastled/FastLED@^3.6.0
+
+[env:esp32-dev]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_flags = 
+	-DCORE_DEBUG_LEVEL=0
+lib_deps = 
+	bblanchon/ArduinoJson@^7.4.2
+	fastled/FastLED@^3.6.0
